--- a/src/components/content/Testimonials.astro
+++ b/src/components/content/Testimonials.astro
@@ -38,7 +38,7 @@ Go ahead… it's ok to cheat!`,
 <div class="mt-24 sm:mt-36">
   <Heading
     id="testimonials"
-    class="mb-14 md:mb-20 truncate text-4xl sm:text-6xl"
+    class="mb-14 md:mb-20 truncate pb-6 sm:pb-8 text-5xl sm:text-6xl"
   >
     Testimonials
   </Heading>
