--- a/src/components/blog/AtomicBlogSeparator.astro
+++ b/src/components/blog/AtomicBlogSeparator.astro
@@ -1,3 +1,1 @@
-<div class="text-center text-zinc-300 text-3xl">
-  &bullet;
-</div>
+<div class="text-center text-zinc-200 text-3xl mt-3.5 mb-6 sm:mt-6 sm:mb-8">&bullet;</div>
