--- a/src/components/content/Footer.astro
+++ b/src/components/content/Footer.astro
@@ -1,4 +1,4 @@
-<p class="text-sm sm:text-xs text-zinc-700 text-center py-12 sm:py-36 leading-relaxed">
-  <span class="font-semibold">Andrew Kodkod</span><br />
+<p class="text-sm sm:text-xs text-zinc-600 text-center py-20 sm:py-36 leading-relaxed">
+  <span class="font-semibold text-zinc-700">Andrew Kodkod</span><br />
    Crafting digital products since 2007
 </p>
